Página de "HTML y CSS" terminada y añadida
Hecha la página de HTML y CSS explicando todo lo que sé sobre ello con imagenes, color de texto y animaciones ya implementadas.

--- a/style_blogs.css
+++ b/style_blogs.css
@@ -73,7 +73,7 @@
   color: #fff;
   position: absolute;
   width: 100%;
-  top: 48%; 
+  top: 55%; 
   left: 0%;
   transform: translateY(-50%);
   text-align: center;
@@ -158,6 +158,13 @@ button:hover{
   top: 50px; 
 
 }
+.htmlycss-pic{
+  width: 90px;
+  position: relative;
+  left: 30px;
+  top: 50px; 
+
+}
 
 @keyframes fade{
   from{
@@ -168,7 +175,7 @@ button:hover{
   
   to{
   opacity: 1;
-  top:48%;
+  top:55%;
 
   }
   }
