Testing phone portability
Testing if the media component will fix the portability problem.

--- a/style_blogs.css
+++ b/style_blogs.css
@@ -179,3 +179,13 @@ button:hover{
 
   }
   }
+
+  @media (max-width: 600px) {
+    posts{
+      opacity: 0;
+      width: 80%;
+      height: 80%;
+
+    }
+
+  }
