--- a/style_sobre.css
+++ b/style_sobre.css
@@ -95,7 +95,7 @@
   top: 78%;
   transform: translateY(-50%);
   color: #009688;
-  animation: fade 1s;
+  animation: fade_txt 1s;
 
 }
 
@@ -106,7 +106,12 @@
   top: 78%;
   transform: translateY(-50%);
   color: #009688;
-  animation: fade 1.5s; 
+  animation: fade_txt 1.5s; 
+}
+
+.content p a{
+  color:#009688;
+
 }
 
 .csharpimg{
@@ -126,11 +131,11 @@
   top: 78%;
   transform: translateY(-50%);
   color: #009688;
-  animation: fade 2s; 
+  animation: fade_txt 2s; 
 }
 
 .htmlimg{
-  width: 5%;
+  width: 6%;
   left: 64%;
   text-align: center;
   position: absolute;
@@ -146,12 +151,12 @@
   top: 78%;
   transform: translateY(-50%);
   color: #009688;
-  animation: fade 2.5s; 
+  animation: fade_txt 2.5s; 
 }
 
 .cssimg{
-  width: 9%;
-  left: 82%;
+  width: 5%;
+  left: 83%;
   text-align: center;
   position: absolute;
   top: 78%;
@@ -172,8 +177,113 @@
   
 }
 
+@keyframes fade_txt{
+  from{
+  opacity:0;
+  top:93%;
+  }
+  
+  to{
+  opacity: 1;
+  top: 78%;
+  }
+  
+}
+
 @media (orientation: portrait) {
     
+  @keyframes fade_txt{
+    from{
+    opacity:0;
+    top:100%;
+    }
+    
+    to{
+    opacity: 1;
+    top: 83%;
+    }
+    
+  }
+
+
+  @keyframes fade{
+    from{
+    opacity:0;
+    top:100%;
+    }
+    
+    to{
+    opacity: 1;
+    top: 90%;
+    }
+    
+  }
+
+  .content h2{
+    font-size: 110px;
+  }
+
+  .content p{
+    position: absolute;
+    top: 52%;
+    left: 20%;
+    font-size: 43px;
+    width: 600px;
+  }
+
+  .pythonimg{
+    width: 150px;
+    top: 90%;
+    left: 8%;
+
+  }
+  .python a h1{
+    top: 83%;
+    left: 8%;
+    font-weight: bold;
+    font-size: 40px;
+  }
+
+  .htmlimg{
+    width: 165px;
+    top: 90%;
+    left: 55%;
+  }
+
+  .html a h1{
+    top: 83%;
+    left: 58%;
+    font-weight: bold;
+    font-size: 40px;
+  }
+  .csharpimg{
+    width: 150px;
+    top: 90%;
+    left: 31.5%;
+
+  }
+
+  .csharp a h1{
+    top: 83%;
+    left: 36.5%;
+    font-weight: bold;
+    font-size: 40px;
+  }
+
+  .cssimg{
+    width: 150px;
+    top: 90%;
+    left: 76%;
+
+  }
+
+  .css a h1{
+    top: 83%;
+    left: 80%;
+    font-weight: bold;
+    font-size: 40px;
+  }
+
   .logo{
     width: 25%;
   }
