--- a/style_index.css
+++ b/style_index.css
@@ -231,11 +231,12 @@ left: 55%;
 
   button{
     width: 400px; 
+    height: 82px;
     padding: 15px 0; 
     text-align: center; 
     margin: 20px 10px;
-    border-radius: 25px; 
-    font-weight: 600;
+    border-radius: 35px; 
+    font-weight: 550;
     border: 0px solid #009688;
     background: transparent;
     cursor: pointer; 
