--- a/style_index.css
+++ b/style_index.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Renogare;
+  src: url(Renogare-Regular.otf);
+  font-weight: normal;
+}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Renogare;
 }
 
 .banner{
@@ -58,7 +64,7 @@
  color: #fff;
  position: absolute;
  width: 100%;
- top: 50%; 
+ top: 51%; 
  transform: translateY(-50%);
  text-align: center;
 }
@@ -114,50 +120,30 @@ button:hover{
   font-size: 50px;
   margin: 25px;
   color:#ffffff;
-  animation: fade1 2s;
+  animation: fade 2s;
   position: absolute;
-  top: 26%;
-  left: 56%;
-}
-
-.content a h1{
-  font-size: 50px;
-  margin: 25px;
-  color:#ffffff;
-  animation: fade2 2s;
-  position: absolute;
-  top: 45%;
-  left: 53%;
-  
+  top: 64%;
+  left: 36%;
+  color: #009688;
+  font-weight: 100;
 }
 
 .logo_p{
 position: relative;
-
+  width: 30%;
+  height: 30%;
 }
 
-@keyframes fade1{
+@keyframes fade{
 from{
 opacity:0;
-left: 65%;
+left: 23%;
 }
 
 to{
 opacity: 1;
-left: 56%;
+left: 36%;
 }
-}
-
-@keyframes fade2{
-  from{
-  opacity:0;
-  left: 62%;
-  }
-  
-  to{
-  opacity: 1;
-  left: 53%;
-  }
 }
 
 @media (orientation: portrait) {
