--- a/style_miweb.css
+++ b/style_miweb.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Renogare;
+  src: url(Renogare-Regular.otf);
+  font-weight: normal;
+}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Renogare;
 }
 
 .banner{
@@ -68,6 +74,7 @@
   font-size: 60px;
   margin: 20px;
   color: #009688;
+  font-weight: 100;
 }
 
 .swiper{
