--- a/style_programandoenpython.css
+++ b/style_programandoenpython.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Renogare;
+  src: url(Renogare-Regular.otf);
+  font-weight: normal;
+}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Renogare;
 }
 
 .banner{
