--- a/style_sobre.css
+++ b/style_sobre.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Renogare;
+  src: url(Renogare-Regular.otf);
+  font-weight: normal;
+}
+
 *{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Renogare;
 }
 
 .banner{
@@ -62,51 +68,52 @@
   transform: translateY(-50%);
   text-align: center;
   font-size: 60px;
-
   margin: 0;
+  font-weight: 100;
 }
 
 .content p{
   position: absolute;
   width: 100%;
-  top: 47%; 
+  top: 50%; 
   margin: 0px;
+  line-height: 40px;
   transform: translateY(-50%);
   text-align: center;
   font-size: 25px;
   color:#fff;
-
 }
 
-.pythonimg{
-  width: 5%;
-  left: 16%;
+.rustimg{
+  width: 6%;
+  left: 18%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   animation: fade 1s;
 }
 
-.python a h1{
-  left: 8%;
+.rust a h1{
+  left: 12%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   color: #009688;
   animation: fade_txt 1s;
-
+  font-weight: 100;
 }
 
 .csharp a h1{
   left: 35%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   color: #009688;
   animation: fade_txt 1.5s; 
+  font-weight: 100;
 }
 
 .content p a{
@@ -119,7 +126,7 @@
   left: 39%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   animation: fade 1.5s;
 }
@@ -128,10 +135,11 @@
   left: 58%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   color: #009688;
   animation: fade_txt 2s; 
+  font-weight: 100;
 }
 
 .htmlimg{
@@ -139,7 +147,7 @@
   left: 64%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   animation: fade 2s;
 }
@@ -148,10 +156,11 @@
   left: 78%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   color: #009688;
   animation: fade_txt 2.5s; 
+  font-weight: 100;
 }
 
 .cssimg{
@@ -159,7 +168,7 @@
   left: 83%;
   text-align: center;
   position: absolute;
-  top: 78%;
+  top: 83%;
   transform: translateY(-50%);
   animation: fade 2.5s;
 }
@@ -172,7 +181,7 @@
   
   to{
   opacity: 1;
-  top: 78%;
+  top: 83%;
   }
   
 }
@@ -185,7 +194,7 @@
   
   to{
   opacity: 1;
-  top: 78%;
+  top: 83%;
   }
   
 }
@@ -231,13 +240,13 @@
     width: 600px;
   }
 
-  .pythonimg{
+  .rustimg{
     width: 150px;
     top: 90%;
     left: 8%;
 
   }
-  .python a h1{
+  .rust a h1{
     top: 83%;
     left: 8%;
     font-weight: bold;
