--- a/style_micomienzo.css
+++ b/style_micomienzo.css
@@ -12,11 +12,10 @@
 
 .banner{
   width: 100%;
-  height: 220vh;
+  height: 230vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
   background-size:contain;
   background-repeat: repeat;
-
 }
 
 .logo{
@@ -74,6 +73,7 @@
   position:relative;
   margin: 50px;
   color: #009688;
+  font-weight: 100;
 }
 
 .content p{
