--- a/style_htmlycss.css
+++ b/style_htmlycss.css
@@ -119,7 +119,7 @@ font-size: 25px;
   width: 25%;
   position: absolute;
   top: 1000px;
-  left: 25px;
+  left: 2%;
   animation: fade-pics-left 2s;
 }
 
