2 Navegation errors fixed - Mobile
The nav menu was small, fixed.

--- a/style_fiverr.css
+++ b/style_fiverr.css
@@ -165,3 +165,14 @@ button:hover img{
   width: 80%;
   
 }
+
+@media (orientation: portrait) {
+  
+  .logo{
+    width: 25%;
+  }
+
+  .navbar{
+    font-size: 29px;
+  }
+}
