--- a/style_miweb.css
+++ b/style_miweb.css
@@ -102,3 +102,14 @@
   width: 80%;
 
 }
+
+@media (orientation: portrait) {
+  
+  .logo{
+    width: 25%;
+  }
+
+  .navbar{
+    font-size: 29px;
+  }
+}
