--- a/style_miweb.css
+++ b/style_miweb.css
@@ -77,30 +77,57 @@
   font-weight: 100;
 }
 
-.swiper{
+#slider {
   position: absolute;
-  width: 80%;
-  height: 65%;
-  top: -70%;
-}
-
-.swiper-slide{
-  display: flex;
-  align-items: center;
+  top: 30%;
+  left: 18%;
+  width: 60%;
+  height: 60%;
   justify-content: center;
-
+  align-items: center;
+	overflow: hidden;
 }
 
-.miweb3{
-  height: 100%;
-  width: 80%;
-
+#slider figure {
+	position: relative;
+	width: 500%;
+	margin: 0;
+	left: 0;
+	animation: 20s slider infinite;
+}
+#slider figure img {
+	float: left;
+	width: 20%;
 }
 
-.miweb4{
-  height: 100%;
-  width: 80%;
-
+@keyframes slider {
+	0% {
+		left: 0;
+	}
+	20% {
+		left: 0;
+	}
+	25% {
+		left: -100%;
+	}
+	45% {
+		left: -100%;
+	}
+	50% {
+		left: -200%;
+	}
+	70% {
+		left: -200%;
+	}
+	75% {
+		left: -300%;
+	}
+	95% {
+		left: -300%;
+	}
+	100% {
+		left: -400%;
+	}
 }
 
 @media (orientation: portrait) {
