--- a/style_blogs.css
+++ b/style_blogs.css
@@ -12,7 +12,7 @@
 
 .banner{
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
   background-size: cover;
   background-position: center;
@@ -79,7 +79,7 @@
   display: flex;
   flex-direction: column;
   width: 40%;
-  top: 60%; 
+  top: 70%; 
   left: 60%;
   transform: translateY(-50%);
   text-align: center;
@@ -176,6 +176,14 @@ button:hover{
   position: relative;
   left: 30px;
   top: 50px; 
+
+}
+
+.rust-pic{
+  width: 90px;
+  position: relative;
+  left: 30px;
+  top: 20px; 
 
 }
 
@@ -298,13 +306,13 @@ button:hover{
 @keyframes fade-blogs{
   from{
   opacity:0;
-  top: 70%;
+  top: 80%;
   
   }
   
   to{
   opacity: 1;
-  top: 60%;
+  top: 70%;
 
   }
 }
