--- a/style_miweb.css
+++ b/style_miweb.css
@@ -12,7 +12,7 @@
 
 .banner{
   width: 100%;
-  height: 100vh;
+  height: 340vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
   background-size: cover;
   background-position: center;
@@ -65,9 +65,10 @@
 .content{
   position: absolute;
   width: 100%;
-  top: 20%; 
+  top: 172%; 
   transform: translateY(-50%);
   text-align: center;
+  justify-content: baseline;
 }
 
 .content h2{
@@ -78,7 +79,7 @@
 }
 
 #slider {
-  position: absolute;
+  position: relative;
   top: 30%;
   left: 18%;
   width: 60%;
@@ -91,13 +92,31 @@
 #slider figure {
 	position: relative;
 	width: 500%;
-	margin: 0;
+	margin-top: 50px;
 	left: 0;
 	animation: 20s slider infinite;
 }
+
 #slider figure img {
 	float: left;
 	width: 20%;
+}
+
+.text p{
+  position: relative;
+  margin-top: 100px;
+  color: white; 
+
+}
+
+.text p a{
+  color:#009688;
+  font-size: 25px;
+}
+
+.text p b{
+  color:#009688;
+  font-size: 35px;
 }
 
 @keyframes slider {
