--- a/style_contarcartas.css
+++ b/style_contarcartas.css
@@ -12,7 +12,7 @@
 
 .banner{
   width: 100%;
-  height: 100vh;
+  height: 350vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(backgroundimg.png);
   background-size: cover;
   background-position: center;
@@ -65,14 +65,15 @@
 .content{
   position: absolute;
   width: 100%;
-  top: 20%; 
+  top: 150%; 
   transform: translateY(-50%);
   text-align: center;
+  justify-content: baseline;
 }
 
 .content h2{
   font-size: 60px;
-  margin: 20px;
+  margin-top: 0px;
   color: #009688;
   font-weight: 100;
 }
@@ -91,38 +92,8 @@
 
 }
 
-.img1{
-  height: 100%;
-  width: 80%;
-  
-}
-
-.img2{
-  height: 100%;
-  width: 80%;
-  
-}
-
-.img3{
-  height: 100%;
-  width: 65%;
-  
-}
-
-.img4{
-  height: 100%;
-  width: 65%;
-  
-}
-
-.img5{
-  height: 100%;
-  width: 80%;
-  
-}
-
 #slider {
-  position: absolute;
+  position: relative;
   top: 30%;
   left: 18%;
   width: 60%;
@@ -135,13 +106,34 @@
 #slider figure {
 	position: relative;
 	width: 500%;
-	margin: 0;
+	margin-top: 50px;
 	left: 0;
 	animation: 20s slider infinite;
 }
+
 #slider figure img {
 	float: left;
 	width: 20%;
+}
+
+.text p{
+  position: relative;
+  margin-top: 60px;
+  color: white; 
+  line-height: 25px;
+}
+
+.text p a{
+  color:#009688;
+  font-size: 20px;
+  margin: 30px;
+}
+
+.text p b{
+  color:#009688;
+  font-size: 35px;
+  font-weight: 100;
+  margin: 300px;
 }
 
 @keyframes slider {
