--- a/style_blogs.css
+++ b/style_blogs.css
@@ -317,7 +317,7 @@ button:hover{
 
 .contarcartas h1{
   position: relative; 
-  font-size: large;
+  font-size: 13;
   font-weight: 100;
   color: #ffffff;
   top: 10%;
